resolved z-index issue on nav hover

--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -3,8 +3,9 @@
   top: 0;
   left: 0;
   width: calc(100vw - 50px);
-  z-index: 0;
+  z-index: 1;
   padding: 20px 25px;
+  background-color: #fff;
 }
 
 .header,
